@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2025, 2026 Obeo.
+ * Copyright (c) 2026 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -12,9 +12,6 @@
  *******************************************************************************/
 package org.eclipse.syson.standard.diagrams.view.nodes;
 
-import java.util.ArrayList;
-import java.util.List;
-
 import org.eclipse.sirius.components.view.builder.IViewDiagramElementFinder;
 import org.eclipse.sirius.components.view.builder.providers.IColorProvider;
 import org.eclipse.sirius.components.view.diagram.NodeDescription;
@@ -22,33 +19,37 @@ import org.eclipse.syson.diagram.common.view.nodes.AbstractItemUsageBorderNodeDe
 import org.eclipse.syson.sysml.SysmlPackage;
 import org.eclipse.syson.util.IDescriptionNameGenerator;
 
-/**
- * Used to create border node description for ActionDefinition getBehavior_Parameter.
- *
- * @author Arthur Daussy
- */
-public class ActionDefinitionParameterBorderNodeDescriptionProvider extends AbstractItemUsageBorderNodeDescriptionProvider {
+import java.util.ArrayList;
+import java.util.List;
 
-    public ActionDefinitionParameterBorderNodeDescriptionProvider(IColorProvider colorProvider, IDescriptionNameGenerator descriptionNameGenerator) {
-        super(SysmlPackage.eINSTANCE.getBehavior_Parameter(), colorProvider, descriptionNameGenerator);
+/**
+ * Used to create the border node description for PortUsage getUsage_NestedItem.
+ *
+ * @author mcharfadi
+ */
+public class PortUsageNestedItemBorderNodeDescriptionProvider extends AbstractItemUsageBorderNodeDescriptionProvider {
+
+    public PortUsageNestedItemBorderNodeDescriptionProvider(IColorProvider colorProvider, IDescriptionNameGenerator descriptionNameGenerator) {
+        super(SysmlPackage.eINSTANCE.getDefinition_OwnedItem(), colorProvider, descriptionNameGenerator);
     }
 
     @Override
     protected String getName() {
-        return this.descriptionNameGenerator.getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getBehavior_Parameter());
+        return this.descriptionNameGenerator.getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getUsage_NestedItem());
     }
 
+    // We filter so elements that extends Item like Parts are not returned
     @Override
     protected String getSemanticCandidatesExpression() {
-        return "aql:self.parameter";
+        return "aql:self.nestedItem->select(e | e.oclIsTypeOf(sysml::ItemUsage))";
     }
 
     @Override
     protected List<NodeDescription> getBindingConectorAsUsageToolTarget(IViewDiagramElementFinder cache) {
         var nodeDescriptions = new ArrayList<NodeDescription>();
         cache.getNodeDescription(this.getName()).ifPresent(nodeDescriptions::add);
+        cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getBehavior_Parameter())).ifPresent(nodeDescriptions::add);
         cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getDefinition_OwnedItem())).ifPresent(nodeDescriptions::add);
-        cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getUsage_NestedItem())).ifPresent(nodeDescriptions::add);
         return nodeDescriptions;
     }
 
@@ -58,8 +59,8 @@ public class ActionDefinitionParameterBorderNodeDescriptionProvider extends Abst
         cache.getNodeDescription(this.getName()).ifPresent(nodes::add);
         cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getPortUsage(), SysmlPackage.eINSTANCE.getUsage_NestedPort())).ifPresent(nodes::add);
         cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getPortUsage(), SysmlPackage.eINSTANCE.getDefinition_OwnedPort())).ifPresent(nodes::add);
+        cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getBehavior_Parameter())).ifPresent(nodes::add);
         cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getDefinition_OwnedItem())).ifPresent(nodes::add);
-        cache.getNodeDescription(this.getDescriptionNameGenerator().getBorderNodeName(SysmlPackage.eINSTANCE.getItemUsage(), SysmlPackage.eINSTANCE.getUsage_NestedItem())).ifPresent(nodes::add);
         return nodes;
     }
 
